--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <div class="lds-ring loader" id="loader"><div></div><div></div><div></div><div></div></div>
     <div class="container">
         <header class="header">
-            <div class="logo"><p class="iot">IOT</p><p class="ech">ech</p></div>
+            <div class="logo"><p class="iot">IOT</p><p class="ech">ech.</p></div>
             <nav class="nav" id="nav">
-                <a href="#showcase" class="nav__opcion nav__opcion-inicio">Inicio</a>
-                <a href="#sobre-nosotros" class="nav__opcion">Sobre nosotros</a>
-                <a href="#tecnologias" class="nav__opcion">Tecnologias</a>
-                <a href="#contacto" class="nav__opcion">Contacto</a>
+                <a href="#showcase" class="nav__opcion nav__opcion-inicio">INICIO</a>
+                <a href="#sobre-nosotros" class="nav__opcion">SOBRE NOSOTROS</a>
+                <a href="#tecnologias" class="nav__opcion">TECNOLOGIAS</a>
+                <a href="#contacto" class="nav__opcion">CONTACTO</a>
             </nav>
             <div class="menu" id="menu"></div>
         </header>
@@ -49,11 +49,11 @@
                 <h1>Tecnologias</h1>
                 <section class="contenedor_tecnologias">
                     <div class="tecnologia"></div>
-                    <div class="tecnologia"></div>
-                    <div class="tecnologia"></div>
-                    <div class="tecnologia"></div>
-                    <div class="tecnologia"></div>
-                    <div class="tecnologia"></div>
+                    <div class="tecnologia tecnologia-2"></div>
+                    <div class="tecnologia tecnologia-3"></div>
+                    <div class="tecnologia tecnologia-4"></div>
+                    <div class="tecnologia tecnologia-5"></div>
+                    <div class="tecnologia tecnologia-6"></div>
                 </section>
             </section>
             <section class="contacto" id="contacto"></section>
