--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <div class="lds-ring loader" id="loader"><div></div><div></div><div></div><div></div></div>
     <div class="container">
         <header class="header">
-            <div class="logo"><p class="iot">IOT</p><p class="ech">ech.</p></div>
+            <div class="logo"><p class="iot">IOT</p><p class="ech">ech</p></div>
             <nav class="nav" id="nav">
                 <a href="#showcase" class="nav__opcion nav__opcion-inicio">INICIO</a>
                 <a href="#sobre-nosotros" class="nav__opcion">NOSOTROS</a>
+                <a href="#ubicacion" class="nav__opcion">UBICACION</a>
                 <a href="#tecnologias" class="nav__opcion">TECNOLOGIAS</a>
                 <a href="#contacto" class="nav__opcion">CONTACTO</a>
             </nav>
@@ -45,8 +46,15 @@
                     </article>
                 </div>
             </section>
+            <div class="ubicacion" id="ubicacion">
+                <div class="ubicacion__titulo"><p class="ubi">Ubi</p><p class="cacion">cacion</p><div class="icono-ubicacion"></div></div>
+                <div class="mapa__container">
+                                      
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28041.081411213876!2d-52.856390670933244!3d-28.73100892164392!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9502a8249746550d%3A0x4313bdb771a02f03!2sEspumoso%2C%20R%C3%ADo%20Grande%20del%20Sur%2C%20Brasil!5e0!3m2!1ses-419!2sar!4v1654712654219!5m2!1ses-419!2sar" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
             <section class="tecnologias" id="tecnologias">
-                <h1>Tecnologias</h1>
+                <h1 class="tecnologia__title"><p>Tec</p>nologias</h1>
                 <section class="contenedor_tecnologias">
                     <div class="tecnologia"></div>
                     <div class="tecnologia tecnologia-2"></div>
@@ -72,7 +80,7 @@
         </main>     
         <footer class="footer">
             <div class="footer__container">
-                <div class="logo-footer"><p class="iot-footer">IOT</p><p class="ech-footer">ech.</p></div>
+                <div class="logo-footer"><p class="iot-footer">IOT</p><p class="ech-footer">ech</p></div>
                 <p class="frase-footer">Soluciones al alcance de un codigo.</p>
                 
             </div>
