--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <div class="footer__info">
                     <div class="footer__container-contacto">
                         <div class="icono-contacto"></div>
-                        <p class="texto-contacto">ale_max2015@yahoo.com.br</p>
+                        <p class="texto-contacto">emanel@iotech.com.br</p>
                     </div>
                     <div class="footer__container-contacto">
                         <div class="icono-contacto-whatsapp"></div>
