--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </section>
             </section>
             <section class="contacto" id="contacto">
-                <form class="form"  action="https://formspree.io/f/xayvkeqb"
+                <form class="form"  action="https://formspree.io/f/xknyezyk"
                 method="POST">
                     <div class="form__container">
                         <h2 class="form__title">Contactame</h2>
@@ -94,11 +94,7 @@
                 <div class="footer__info">
                     <div class="footer__container-contacto">
                         <div class="icono-contacto"></div>
-                        <p class="texto-contacto">alejandro@iotech.com.br</p>
-                    </div>
-                    <div class="footer__container-contacto footer__container-contacto-2">
-                        <div class="icono-contacto"></div>
-                        <p class="texto-contacto">emanuel@iotech.com.br</p>
+                        <p class="texto-contacto">iotech.develoment@gmail.com</p>
                     </div>
                     <div class="footer__container-contacto">
                         <div class="icono-contacto-whatsapp"></div>
