--- a/index.html
+++ b/index.html
@@ -34,17 +34,24 @@
                     <!-- <p>Tranquilo, <br> <b class="beneficios" style="color: red;">nosotros lo programamos!</b></p> -->
                 </div>
                 <article class="showcase__contenedor-imagenes">
-                    <div class="showcase-imagen showcase__imagen-1" id="showcase-imagen-1"><img src="/img/showcase/hidro5r.png" alt=""></div>
+                    <img src="/img/showcase/press_whit_shadow_white.png" alt="">
+                    <!-- <div class="showcase-imagen showcase__imagen-1" id="showcase-imagen-1"><img src="/img/showcase/hidro5r.png" alt=""></div>
                     <div class="showcase-imagen showcase__imagen-2" id="showcase-imagen-2"><img src="/img/showcase/temp1r.png" alt=""></div>
-                    <div class="showcase-imagen showcase__imagen-3" id="showcase-imagen-3"><img src="/img/showcase/dashboard1.png" alt=""></div>
+                    <div class="showcase-imagen showcase__imagen-3" id="showcase-imagen-3"><img src="/img/showcase/dashboard1.png" alt=""></div> -->
                 </article>       
             </section>
             <section class="servicios" id="sobre-nosotros">
                 <h1 class="servicios__titulo"><span class="sobre">Sobre</span> nós</h1>
                 <div class="servicios__container">
-                    <p>Em nossa sociedade moderna, tudo está conectado: de computadores a carros, telefones, casas e praticamente todos os dispositivos eletrônicos que você    encontra. Todos esses objetos separados estão vinculados por meio da Internet das Coisas (IoT): uma tecnologia mais inteligente torna a vida mais ágil.
+                    <p>
+                        Em nossa sociedade moderna, tudo está conectado: de computadores a carros, telefones, casas e todos os dispositivos eletrônicos existentes. Todos esses objetos separados estão vinculados por meio da Internet das Coisas (IOT): tecnologia mais inteligente que torna a vida mais rápida.
+                        <br>  <br>
+                        Somos uma empresa focada no desenvolvimento de aplicações móveis, especialmente pensadas para os empreendedores interessados ​​em fazer crescer o seu negócio graças à inovação tecnológica. A nossa empresa procura desenvolver um software personalizado que se adapte às necessidades dos nossos clientes, que adoramos encantar.
+                        <br> <br>
+                        Fornecemos inteligência e visibilidade de rede em tempo real com monitoramento contínuo do comportamento do dispositivo. Se você está procurando um serviço de desenvolvimento de software seguro e confiável para o seu negócio, então você veio ao lugar certo.
+                        <br> <br>
+                        Terceirize os serviços da IOTech para suas necessidades de desenvolvimento de software e comece a viver a experiência de poder controlar confortavelmente seus serviços de negócios remotamente.
                     </p>
-                    <img src="/img/servicios/undraw_app_installation_re_h36x.svg" alt="">
                 </div>
             </section>
             <!-- <div class="ubicacion" id="ubicacion">
@@ -61,15 +68,17 @@
                         <img src="/img/proyectos/hidro3r.png" alt="">
                     </article>
                     <article class="proyectos__textos-container texto-1">
-                        <h1>Titulo</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt labore, nostrum consectetur nesciunt accusamus a consequatur delectus vero illum aliquid!</p>
+                        <h1>Hidrotec</h1>
+                        <p>O aplicativo Hidrotec Controller permite monitorar e ajustar todos os equipamentos controlados pelo sistema de controle de piscina.</p>
+                        <a href="/hidro.html" target="_blank">Ver mas >></a>
                     </article>
                     <article class="proyectos__imagen-container imagen-2">
                         <img src="/img/proyectos/temp5.png" alt="">
                     </article>
                     <article class="proyectos__textos-container texto-2">
-                        <h1>Titulo</h1>
+                        <h1>Temp Cotroller</h1>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt labore, nostrum consectetur nesciunt accusamus a consequatur delectus vero illum aliquid!</p>
+                        <a href="#">Ver mas >></a>
                     </article>
                 </div>
             </section>
@@ -100,7 +109,11 @@
                         <!-- <input type="submit" value="Enviar" class="form__cta"> -->
                         
                     </div>
-                </form>     
+                </form>
+                <video onloadedmetadata="this.muted=true" autoplay loop> 
+                    <source src="/img/contacto/production ID_5190547.mp4">
+                </video>     
+                <div class="capa"></div>
             </section>
         </main>     
         <footer class="footer">
@@ -118,11 +131,11 @@
                     </div>
                     <div class="footer__container-contacto">
                         <div class="icono-contacto-whatsapp"></div>
-                        <p class="texto-contacto">+55 54 9693-3976(BR)</p>
+                        <p class="texto-contacto"><a href="https://wa.me/555496933976?text=Quiero%20saber%20mas%20sobre%20el%20servicio">+55 54 9693-3976(BR)</a></p>
                     </div>
                     <div class="footer__container-contacto">
                         <div class="icono-contacto-whatsapp"></div>
-                        <p class="texto-contacto">+54 9 3542 46-1287(AR)</p>
+                        <p class="texto-contacto"><a href="https://wa.me/5493542461287?text=Quiero%20saber%20mas%20sobre%20el%20servicio">+54 9 3542 46-1287(AR)</a></p>
                     </div>
                     <!-- <div class="footer__container-contacto">
                         <div class="icono-contacto-facebook"></div>
