--- a/hidro.html
+++ b/hidro.html
@@ -9,6 +9,7 @@
     <script src="https://kit.fontawesome.com/e8cd0e84d1.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div class="lds-ring loader" id="loader"><div></div><div></div><div></div><div></div></div>
     <a class="atras" href="index.html">Atras</a>
     <div class="container">
         <h1>Hidrotec</h1>
@@ -18,12 +19,12 @@
             </section>
             <section class="texto__container">
                 <ul>
-                    <li><i class="fa-solid fa-circle-check"></i>Control y configuracion de temperatura remota de la piscina.</li>
-                    <li><i class="fa-solid fa-circle-check"></i>Display de temperatura del clima en tiempo real.</li>
-                    <li><i class="fa-solid fa-circle-check"></i>Control de temperatura del agua automatica y manual.</li>
-                    <li><i class="fa-solid fa-circle-check"></i>Indicador de temperatura actual del agua de la piscina.</li>
-                    <li><i class="fa-solid fa-circle-check"></i>Encendido de bomba desde la aplicacion mobil.</li>
-                    <li><i class="fa-solid fa-circle-check"></i>Control remota de luces LED desde el disitivo mobil.</li>
+                    <li><i class="fa-solid fa-circle-check"></i>Controle e configuração de temperatura remota da piscina.</li>
+                    <li><i class="fa-solid fa-circle-check"></i>Display da temperatura do tempo em tempo real.</li>
+                    <li><i class="fa-solid fa-circle-check"></i>Controle automático e manual da temperatura da água.</li>
+                    <li><i class="fa-solid fa-circle-check"></i>Indicador atual da temperatura da água da piscina.</li>
+                    <li><i class="fa-solid fa-circle-check"></i>Ignição da bomba a partir do aplicativo móvel.</li>
+                    <li><i class="fa-solid fa-circle-check"></i>Controle remoto de luzes LED do dispositivo móvel.</li>
                 </ul>
             </section>
         </div>
@@ -34,9 +35,10 @@
             <a href="#" target="_blank"></a>
         </section>
         <section class="ios">
-            <img src="/hidro-img/download/ios.jpg" alt="ios">
+            <img src="/hidro-img/download/Logo-Aplicación-AppII-Store.jpg" alt="ios">
             <a href="#" target="_blank"></a>
         </section>
     </div>
+    <script src="/hidro.js"></script>
 </body>
 </html>
