--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                     </article>
                     <article class="proyectos__textos-container texto-2">
                         <h1>Temp Cotroller</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt labore, nostrum consectetur nesciunt accusamus a consequatur delectus vero illum aliquid!</p>
-                        <a href="#">Ver mas >></a>
+                        <p>O aplicativo móvel Temp Controller é ideal para aqueles empreendedores que desejam um salto na qualidade de seu serviço e um controle mais preciso da temperatura de sua câmara frigorífica.</p>
+                        <a href="/temp.html" target="_blank">Ver mas >></a>
                     </article>
                 </div>
             </section>
